--- a/css/style.css
+++ b/css/style.css
@@ -386,8 +386,9 @@ main {
     padding: 0;
     transition: all .5s;
 }
-.th-arrow-btn .btn-arrow img{
- width: 100%;
+
+.th-arrow-btn .btn-arrow img {
+    width: 100%;
 }
 
 .th-arrow-btn:hover .btn-arrow {
@@ -1207,7 +1208,7 @@ main {
 
 .ouw-box:hover .ouw-h h3 {
     color: var(--th-color-2);
-    font-size: var(--th-h2-fs);
+    font-size: calc(var(--th-h2-fs)*.7);
     font-weight: 700;
     line-height: 112.5%;
     /* 72px */
@@ -1671,7 +1672,6 @@ main {
     transition: all .5s;
 }
 
-
 .glimg img {
     filter: grayscale(1);
     transition: all .5s;
@@ -1733,34 +1733,127 @@ main {
 .case-hero .tag {
     border-radius: 2px;
 }
-.case-about{
+
+.case-about {
     padding: 40px 0px;
 }
-.case-visual-identity{
+
+.case-visual-identity {
     padding: 100px 0px 50px 0px;
 }
-.case-visual-identity .cavi-img{
-   width: 135px;
-   max-width: 135px;
+
+.case-visual-identity .cavi-img {
+    width: 135px;
+    max-width: 135px;
 }
-.case-visual-identity .cavi-img img{
-   width: 100%;
+
+.case-visual-identity .cavi-img img {
+    width: 100%;
 }
-.case-study-website{
+
+.case-study-website {
     padding: 80px 0px;
 }
+
 .case-study-website .th-arrow-btn:hover .btn-arrow {
     transform: translateX(-100px);
 }
+
 .case-study-website .th-arrow-btn:hover .btn-text {
     transform: translateX(70px);
 }
-.casw-text-bottom{
+
+.casw-text-bottom {
     border-bottom: 1px solid var(--th-color-2);
     padding-top: 30px;
     padding-bottom: 10px;
 }
-.case-study-project{
+
+.case-study-project {
+    padding: 80px 0px 40px 0px;
+}
+
+/* ------------- Case Hero Section End ------------- */
+
+
+/* ------------ Contact Use Page =================------------ */
+
+/* 32.Contact Slider Section Start ------------- */
+.contact {
     padding-top: 80px;
 }
-/* ------------- Case Hero Section End ------------- */
+
+.cons-top-container h2 {
+    line-height: 120%;
+}
+
+.cons-b-box {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding: 150px 0px;
+}
+
+.cons-top-container {
+    border-bottom: 1px solid var(--th-color-2);
+    padding-bottom: 15px;
+}
+
+.cons-b {
+    border: 1px solid var(--th-color-2);
+    max-width: 380px;
+    transition: all .5s;
+}
+
+.cons-b h3,
+.cons-b h5,
+.cons-b p {
+    transition: all .5s;
+}
+
+.cons-b:hover {
+    background-color: var(--th-color-2);
+    color: var(--th-color-3);
+}
+
+.cons-b:hover h3,
+.cons-b:hover h5,
+.cons-b:hover p {
+    color: var(--th-color-3);
+}
+
+.cons-b-list .cons-b {
+    max-width: 500px;
+}
+.small-heading .cons-b{
+    max-width: 220px;
+}
+.small-heading .cons-b label {
+    padding: 20px 30px;
+}
+
+.cons-b-list .cons-b ul {
+    min-width: 210px;
+}
+
+.cons-b label {
+    padding: 20px;
+    cursor: pointer;
+
+}
+
+.cons-b h3 {
+    text-transform: none !important;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 120%;
+    margin-bottom: 30px;
+}
+.cons-b h5 {
+    text-transform: none !important;
+    font-weight: 600;
+    line-height: 120%;
+    text-align: center;
+}
+
+/* ------------- Contact Slider Section End ------------- */
